--- a/index.html
+++ b/index.html
@@ -1,70 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin dashboard</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="sidebar">
-            <div class="logo">
-                <img src="" alt="">
-                <p>Dashboard</p>
-            </div>
-            <ul class="sidebar-content">
-                <li>
-                    <img src="" alt="">
-                    <p>Home</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <p>Profile</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <p>Message</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <p>History</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <p>Tasks</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <p>Communities</p>
-                </li>
-            </ul>
-            <ul class="sidebar-footer">
-                <li>
-                    <img src="" alt="">
-                    <p>Settings</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <p>Support</p>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <p>Privacy</p>
-                </li>
-            </ul>
+      <div class="sidebar">
+        <div class="logo">
+          <img src="" alt="" />
+          <p>Dashboard</p>
         </div>
-        <div class="nav">
-            <div class="navbar"></div>
-            
+
+        <ul class="sidebar-content">
+          <li>
+            <img src="" alt="" />
+            <p>Home</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Profile</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Message</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>History</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Tasks</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Communities</p>
+          </li>
+        </ul>
+
+        <ul class="sidebar-footer">
+          <li>
+            <img src="" alt="" />
+            <p>Settings</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Support</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Privacy</p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="nav">
+        <div class="navbar"></div>
+        <div class="intro">
+          <div class="name">
+            <p>Hi there,</p>
+          </div>
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
         </div>
-        <div class="main">
-            <div class="project"></div>
-            <div class="notice">
-                <div class="announcements"></div>
-                <div class="trending"></div>
-            </div>
+      </div>
+      <div class="main">
+        <div class="project"></div>
+        <div class="notice">
+          <div class="announcements"></div>
+          <div class="trending"></div>
         </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
